--- a/assets/tpl/index.html
+++ b/assets/tpl/index.html
@@ -47,7 +47,7 @@
                     <div class="card-body">
                         <h4 class="card-title">WireGuard Portal</h4>
                         <p class="card-text">WireGuard Portal is a simple, web based configuration portal for WireGuard.</p>
-                        <a href="https://github.com/h44z/wg-portal/" title="WireGuard Portal" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm">More details</a>
+                        <a href="https://github.com/nlemeshko/wg-portal/" title="WireGuard Portal" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm">More details</a>
                     </div>
                 </div>
             </div>
